--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@nxrocks/nx-spring-boot": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "nx": "^17.0.2",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "tslib": "^2.6.2"
   }
 }
