--- a/packages/shared-components/tsconfig.json
+++ b/packages/shared-components/tsconfig.json
@@ -1,13 +1,19 @@
 {
+  "extends": "../../tsconfig.base.json",
+  "include": ["**/*.ts", "**/*.tsx"],
   "compilerOptions": {
-    "jsx": "react-jsx",
-    "allowJs": true,
+    "isolatedModules": true,
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
+    "jsx": "react-jsx",
     "module": "commonjs",
     "outDir": "./dist",
-    "target": "ESNext"
+    "target": "ESNext",
+    "lib": ["ESNext"],
+    "strict": true,
+    "allowJs": true,
+    "forceConsistentCasingInFileNames": true,
+    "rootDir": "."
   },
-  "include": ["."],
   "exclude": ["dist", "node_modules", "**/*.spec.ts"]
 }
